[gd_scene load_steps=8 format=3 uid="uid://dr7g6uyxfnv2y"]

[ext_resource type="PackedScene" uid="uid://dca058e2v5enp" path="res://scenes/paddle_left.tscn" id="1_p5ilp"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_pasd7"]
[ext_resource type="PackedScene" uid="uid://hlaahhq8ypp" path="res://scenes/paddle_right.tscn" id="2_2ama4"]
[ext_resource type="PackedScene" uid="uid://j3u46t2bhqti" path="res://scenes/ball.tscn" id="3_o7wdf"]
[ext_resource type="AudioStream" uid="uid://dgbvudjvbvscn" path="res://assets/Assets/ping_pong_8bit_beeep.ogg" id="5_43sqq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pfgc"]
size = Vector2(1318, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qivc"]
size = Vector2(34.125, 701)

[node name="Main" type="Node2D"]
script = ExtResource("1_pasd7")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -1126.0
offset_top = -825.0
offset_right = 2927.0
offset_bottom = 1904.0
color = Color(0.376471, 0.439216, 0.313726, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1282.0
offset_bottom = 720.0
color = Color(0.156863, 0.219608, 0.0941176, 1)
metadata/_edit_use_anchors_ = true

[node name="wallTop" type="StaticBody2D" parent="."]

[node name="TopWallCollision" type="CollisionShape2D" parent="wallTop"]
position = Vector2(639, -10)
shape = SubResource("RectangleShape2D_3pfgc")

[node name="wallBottom" type="StaticBody2D" parent="."]

[node name="BottomWallCollision" type="CollisionShape2D" parent="wallBottom"]
position = Vector2(639, 730)
shape = SubResource("RectangleShape2D_3pfgc")

[node name="PaddleLeft" parent="." instance=ExtResource("1_p5ilp")]
position = Vector2(10, 360)

[node name="PaddleRight" parent="." instance=ExtResource("2_2ama4")]
position = Vector2(1270, 360)

[node name="Ball" parent="." instance=ExtResource("3_o7wdf")]
position = Vector2(640, 360)

[node name="Area2DLeftSide" type="Area2D" parent="."]

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="Area2DLeftSide"]
position = Vector2(-21.9375, 360)
shape = SubResource("RectangleShape2D_8qivc")

[node name="Area2DRightSide" type="Area2D" parent="."]
position = Vector2(30, 0)

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="Area2DRightSide"]
position = Vector2(1273.88, 361.5)
shape = SubResource("RectangleShape2D_8qivc")

[node name="PlayerScore" type="Label" parent="."]
offset_left = -50.0
offset_right = 1231.0
offset_bottom = 718.0
text = "Teste"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentScore" type="Label" parent="."]
offset_left = 50.0
offset_right = 1331.0
offset_bottom = 718.0
text = "Teste"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_43sqq")
volume_db = -20.0

[connection signal="body_entered" from="Area2DLeftSide" to="." method="_on_area_2d_left_side_body_entered"]
[connection signal="body_entered" from="Area2DRightSide" to="." method="_on_area_2d_right_side_body_entered"]
